--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Fun Game</title>
+    <link rel="icon" href="./favicon2.PNG">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -35,6 +36,9 @@
       </div>
     </div>
   </div>
+  <footer>
+      © 2025 &nbsp; <a href="https://github.com/diptiprasadsarangi01" style="color: goldenrod;"> RetroRiot</a> ⚡ Level Up. Game On.
+  </footer>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
